# darknet

./: .gitignore  CMakeLists.txt  Makefile  cmd.md
cfg/: coco.data  yolov3.cfg
examples/: darknet.c  detector.c
scripts/: validate_coco.py
src/: compare.c
